--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "private": true,
   "dependencies": {
+    "@apollo/server": "^4.6.0",
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
     "axios": "^1.0.0",
+    "graphql": "^16.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tslib": "^2.3.0"
